# -toast-mcp-server

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: README.md  client_configuration.md  configuration.md  examples.md  troubleshooting.md  usage.md
