[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toast-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server with Windows 10 and macOS desktop notifications support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "win10toast;platform_system=='Windows'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
